test/baseline/func-to_amount.test
; Tests for the to_amount() function
; Converts a value to an amount type

2012-01-01 Test to_amount function
    Assets:Test                       $100.00
    Equity:Opening

; Positive test: convert number to amount
test eval "to_amount(100)"
100
end test

; Positive test: convert decimal to amount
test eval "to_amount(100.50)"
100.5
end test

; Negative test: too few arguments
test eval "to_amount()" -> 1
__ERROR__
While evaluating value expression:
  to_amount()
  ^^^^^^^^^^^
While calling function 'to_amount ':
Error: Too few arguments to function
end test
